[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.LawHelpMNFramework"
version = "0.0.1"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Amanda Sauber", email = "alsauber@mnlegalservices.org" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
